# steam-tools-ng

./: .gitignore  .pylintrc  .scrutinizer.yml  .sourcery.yaml  .travis.yml  MANIFEST.in  README.md  codecov.yml  dev-requirements.txt  dev_console.py  dist_script.py  dist_script.sh  environment.iss  installer.iss  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.py  steam-tools-ng.desktop  steam-tools-ng.py  steam_tools_ng.py  update_dev_environment.cmd  update_dev_environment.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  coverage.yml  dependency-review.yml  deploy.yml  scorecards.yml
i18n/: build_translations.py  fr.po  pt_BR.po  steam-tools-ng.pot  steam_tools_ng.pot  update_pot.py
icons/Default/: index.theme
installer/: custom_messages.iss  download.iss  environment.iss  install.iss  netinstall.iss  setup.iss  shutdown.iss
po/: pt_BR.po  steam-tools-ng.pot  update_pot.py
src/: __init__.py  config.py  i18n.py  logger_handlers.py  version.py
src/console/: authenticator.py  cardfarming.py  steamgifts.py  steamtrades.py  utils.py
src/gtk/: about.py  adb.py  add_authenticator.py  advanced.py  application.py  confirmation.py  login.py  settings.py  setup.py  utils.py  window.py
src/steam_tools_ng/: __init__.py  __main__.py  cli.py  config.py  gui.py  i18n.py  logger_handlers.py  steam_api_executor.py
src/steam_tools_ng/console/: authenticator.py  cli.py  login.py  utils.py
src/steam_tools_ng/core/: __init__.py  cardfarming.py  confirmations.py  coupons.py  fakerun.py  market.py  steamgifts.py  steamguard.py  steamtrades.py  utils.py
src/steam_tools_ng/gtk/: __init__.py  about.py  advanced.py  application.py  async_gtk.py  authenticator.py  confirmation.py  coupon.py  login.py  market.py  settings.py  update.py  utils.py  window.py
src/steam_tools_ng/icons/: settings.ini
src/steam_tools_ng/icons/Default/: index.theme
steam_tools_ng/: __init__.py  config.py  i18n.py  logger_handlers.py  version.py
steam_tools_ng/console/: authenticator.py  cardfarming.py  cli.py  login.py  steamgifts.py  steamtrades.py  utils.py
steam_tools_ng/core/: __init__.py  cardfarming.py  confirmations.py  fakerun.py  steamgifts.py  steamguard.py  steamtrades.py  utils.py
steam_tools_ng/gtk/: about.py  adb.py  advanced.py  application.py  async_gtk.py  authenticator.py  confirmation.py  login.py  password.py  settings.py  setup.py  utils.py  window.py
tests/: test_placeholder.py
tools/MSYS/: common.sh  dist_script.sh
tools/WSL/: common.py  dev_console.py  dist_script.py  test_native.py  update_dev_environment.py
tools/Windows/: common.cmd  dev_console.cmd  dist_script.cmd  dist_script_native.cmd  test_native.cmd  update_dev_environment.cmd
ui/: __init__.py  about.py  adb.py  application.py  authenticator_utils.py  config.py  console.py  console_utils.py  i18n.py  logger.py  logger_handlers.py  settings.py  window.py
ui/console/: authenticator.py
ui/gtk/: about.py  adb.py  application.py  settings.py  window.py
